--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://it21754470:Sathmi%40124@cluster0.wccpkvx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+wheather_api_key=370fe6e1c8d64ec0804adbc64827c408
